[package]
name = "crosspipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
libspa-sys = "0.7.2"
nix = { version = "0.27.1", features = ["mman", "fs"] }
pipewire = "0.7.2"
pipewire-sys = "0.7.2"
softbuffer = "0.4.1"
winit = { version = "0.29.10", default-features = false, features = ["rwh_06", "x11"] }
